--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,13 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafe Menu</title>
-    <link rel="stylesheet" href="style2.css">
+    <title>Antique Cafe</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
 
+    <!-- Navigation Bar -->
     <header>
         <nav>
             <ul>
@@ -19,76 +21,16 @@
         </nav>
     </header>
 
-    <!-- Background Section -->
-    <div class="menu-container">
-        <!-- Header -->
-        <div class="menu-header">
-            <h1>Our Cafe Menu</h1>
+    <!-- Hero Section -->
+    <section class="parallax">
+        <div class="content">
+            <h1>Antique Cafe</h1>
+            <p>Your daily energy booster</p>
+            <p>Welcome to Antique Cafe, your favorite place for coffee.</p>
+            <a href="index.html" class="btn">View Menu</a>
         </div>
-
-        <!-- Menu Grid -->
-        <div class="menu-grid">
-            
-            <!-- Hot Drinks -->
-            <div class="menu-card">
-                <h2>Hot Drinks</h2>
-
-                <div class="menu-item">
-                    <img src="menu-item-1.jpg" alt="Hot Cappuccino">
-                    <div>
-                        <h3>Hot Cappuccino</h3>
-                        <p>Small: 50/-<br>Large: 100/-</p>
-                    </div>
-                </div>
-
-                <div class="menu-item">
-                    <img src="menu-item-2.jpg" alt="Hot Americano">
-                    <div>
-                        <h3>Hot Americano</h3>
-                        <p>Small: 60/-<br>Large: 120/-</p>
-                    </div>
-                </div>
-
-                <div class="menu-item">
-                    <img src="menu-item-3.jpg" alt="Hot Latte">
-                    <div>
-                        <h3>Hot Latte</h3>
-                        <p>Medium: 80/-<br>Large: 65/-</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Iced Drinks -->
-            <div class="menu-card">
-                <h2>Iced Drinks</h2>
-
-                <div class="menu-item">
-                    <img src="menu-item-4.jpg" alt="Iced Cappuccino">
-                    <div>
-                        <h3>Iced Cappuccino</h3>
-                        <p>Small: 65/-<br>Large: 105/-</p>
-                    </div>
-                </div>
-
-                <div class="menu-item">
-                    <img src="iced-americano.jpg" alt="Iced Americano">
-                    <div>
-                        <h3>Iced Americano</h3>
-                        <p>Small: 100/-<br>Large: 150/-</p>
-                    </div>
-                </div>
-
-                <div class="menu-item">
-                    <img src="iced-latte.jpg" alt="Iced Milky Latte">
-                    <div>
-                        <h3>Iced Milky Latte</h3>
-                        <p>Small: 159/-<br>Large: 200/-</p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
+    </section>
 
 </body>
 </html>
+
