--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -83,7 +83,7 @@ nav ul li a:hover {
     <!-- Navigation Bar -->
     <nav>
         <ul class="nav-links">
-            <li><a href="main.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
